# supabase-fdw-open-weather

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  QUICKSTART.md  README.md  test_fdw.sql
.github/workflows/: README.md  release.yml  test.yml
docs/endpoints/: README.md  current-weather.md  daily-forecast.md  daily-summary.md  historical-weather.md  hourly-forecast.md  minutely-forecast.md  weather-alerts.md  weather-overview.md
docs/guides/: DEPLOYMENT_GUIDE.md  TROUBLESHOOTING.md
docs/reference/: API_OVERVIEW.md  SQL_EXAMPLES.md
src/: bindings.rs  lib.rs
wit/: world.wit
